--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,20 @@ bdk = "0.28.2"
 
 [package rust bitcoin]
 rust-bitcoin = "0.13.0"
+
+[bdk dependencies]
+log = "0.4"
+rand = "^0.8"
+miniscript = { version = "10.0.0", features = ["serde"], default-features = false }
+bitcoin = { version = "0.30.0", features = ["serde", "base64", "rand-std"], default-features = false }
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = { version = "^1.0" }
+bdk_chain = { path = "../chain", version = "0.5.0", features = ["miniscript", "serde"], default-features = false }
+
+feature
+bitcoin = { version = "0.30.0", default-features = false }
+serde_crate = { package = "serde", version = "1", optional = true, features = ["derive"] }
+
+# Use hashbrown as a feature flag to have HashSet and HashMap from it.
+# note version 0.13 breaks outs MSRV.
+hashbrown = { version = "0.11", optional = true, features = ["serde"] }
