--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ name = "Hash Pool"
 version = "1.0.3-beta"
 
 [package BDK]
-bdk = "0.29.0"
+bdk = "1.0.0-alpha.4"
 
 [package rust bitcoin]
 rust-bitcoin = "0.13.0"
