--- a/.env
+++ b/.env
@@ -3,4 +3,8 @@
 TESTNET=https://mempool.space/testnet
 SIGNET=https://mempool.space/signet
 MAINNET=https://mempool.space/
+
 # Node
+
+LND_ENDPOINT = 
+BITCOI_CORE = 
