--- a/.env
+++ b/.env
@@ -4,6 +4,14 @@ TESTNET=https://mempool.space/testnet
 SIGNET=https://mempool.space/signet
 MAINNET=https://mempool.space/
 
+
+## BITCOIN NETWORK
+
+BITCOIN_NETWORK_MAINNET = true
+BITCOIN_NETWORK_TESTNET = true
+BITCOIN_NETWORK_SIGNET = true
+
+
 # Node
 
 LND_ENDPOINT = 
