--- a/.env
+++ b/.env
@@ -15,4 +15,8 @@ BITCOIN_NETWORK_SIGNET = true
 # Node
 
 LND_ENDPOINT = 
-BITCOI_CORE =                                 ## Web
+BITCOI_CORE =                                 
+
+## Web
+
+LOCAL_HOST = https://3001
