--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@ BITCOIN_NETWORK_SIGNET = true
 
 # Node
 
-LND_ENDPOINT = 
-BITCOI_CORE =                                 
+LND_ENDPOINT = xxx
+BITCOI_CORE = xxx                               
 
 ## Web
 
