--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ## network
 
-TESTNET=https://mempool.space/testnet
+TESTNET=https://mempool.space/testnet4
 SIGNET=https://mempool.space/signet
 MAINNET=https://mempool.space/
 
