--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 ## network
 
-TESTNET=https://mempool.space/testnet4
-SIGNET=https://mempool.space/signet
-MAINNET=https://mempool.space/
+BITCOIN_NETWORK_TESTNET=https://mempool.space/testnet4
+BITCOIN_NETWORK_SIGNET=https://mempool.space/signet
+BTCOIN_NETWORK_MAINNET=https://mempool.space/
 
 
 ## BITCOIN NETWORK
