--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,12 @@
-[pcakage]
+[pacakage]
 
 name = "Hash Pool"
+author = "22388o"
+description = "A simple library for Mining pools and developers"
+documentation = "https://docs.rs/hashpool"
 version = "1.0.10-beta"
 
-[package BDK]
-bdk = "1.0.0-alpha.13"
-
-[package rust bitcoin]
-bitcoin = "0.32.0"
-
-[lightning]
-lighning = "0.0.123"
-
 [dependencies]
-lihghtning = 
+bdk = "1.0.0-alpha.13"
+bitcoin = "0.32.0"
+lighning = "0.0.123"
