--- a/src/on-chain/Cargo.toml
+++ b/src/on-chain/Cargo.toml
@@ -9,3 +9,10 @@ edition = "2018"
 [dependencies]
 bdk = "1.0.0-alpha.13"
 bitcoin = "0.32.0"
+
+[lib]
+name = "on-chain"
+path = "src/on-chain/lib.rs"
+
+name = "data"
+path = "src/data/lib.rs
