--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ BTCOIN_NETWORK_MAINNET=https://mempool.space/
 ## BITCOIN NETWORK
 
 BITCOIN_NETWORK_MAINNET = true
-BITCOIN_NETWORK_TESTNET = true
+BITCOIN_NETWORK_TESTNET4 = true
 BITCOIN_NETWORK_SIGNET = true
 
 
