--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ version = "1.0.11-beta"
 [dependencies]
 
 crypto = { version = "0.5.1", features = ["digest"] }
-bdk = "=1.0.0-alpha.11"
-bitcoin = "0.32.0"
-lightning = "0.0.123"
+bdk = "=1.0.0-beta.1"
+bitcoin = "=0.32.0"
+lightning = "=0.0.123"
 
 [lib]
 
