--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ version = "1.0.11-beta"
 [dependencies]
 
 crypto = { version = "0.5.1", features = ["digest"] }
-bdk = "=1.0.0-beta.1"
+bdk = "=1.0.0-alpha.11"
 bitcoin = "=0.32.2"
 lightning = "=0.0.123"
 rust = "=1.80.0"
