--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ documentation = "https://docs.rs/hashpool"
 homepage = "https://www.arealayer.net/products"
 version = "1.0.14-beta"
 edition = "2021"
+include = ["bin/hashpoold.rs"]
 
 [dependencies]
 
