--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["AreaLayer"]
 license = "MIT"
 description = "A simple library for Mining pools and developers"
 documentation = "https://docs.rs/hashpool"
-homepage = "https://www.arealayer.net/products"
+homepage = "https://www.arealayer.net/projects"
 version = "1.0.14-beta"
 edition = "2021"
 
