--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,11 @@ bitcoin = "=0.32.2"
 lightning = "=0.0.124"
 sha2 = "=0.10.8"
 ppv-lite86 = "0.2.20"
+tokio = { version = "1", features = ["full"] }
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+tokio-util = "0.6"
+futures = "0.3"
 
 [lib]
 
