--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ license = "MIT"
 description = "A simple library for Mining pools and developers"
 documentation = "https://docs.rs/hashpool"
 homepage = "https://www.arealayer.net/projects"
+repository = "https://github.com/AreaLayer/HashPool"
 version = "1.0.23-beta"
 edition = "2021"
 
